tests/syntax/good/testfile-assign-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
void m() { int x; int y; y = x = 0; }
