tests/syntax/bad/testfile-return-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
int m() { return
